Fix footer with spacing issues, remove some extraneous links

--- a/v1/styles/main.css
+++ b/v1/styles/main.css
@@ -70,6 +70,10 @@ img.searchBtn {
 
 
 /*** Footer ***/
+#pageFooterAbout {
+  hyphens: auto;
+}
+
 footer#pageFooter ul.nav {
   padding-left: 5px;
 }
